--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@gsap/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^14.2.11",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
