--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "country-flag-icons": "^1.5.13",
+    "crypto-js": "^4.2.0",
     "embla-carousel-react": "^8.2.0",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
@@ -38,6 +40,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-dropdown-select": "^4.11.3",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.52.2",
     "react-leaflet": "^4.2.1",
     "react-phone-number-input": "^3.4.5",
